update: cleanup the js files

--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@
             class="gh-search-list"
             id="userSelect"
             size="1"
-	    
             onchange="handleSelectChange()"
           ></select>
         </div>
-<br><br>
-<div class="search">
-  <input type="text" id="search-input" placeholder="Search projects..." oninput="filterProjects()">
-</div>
+        <br /><br />
+        <div class="search">
+          <input
+            type="text"
+            id="search-input"
+            placeholder="Search projects..."
+            oninput="filterProjects()"
+          />
+        </div>
       </div>
 
       <div class="projects">
@@ -79,6 +83,6 @@
     </div>
 
     <script type="text/javascript" src="js/predict.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
