Add link to settings.js

--- a/project.html
+++ b/project.html
@@ -192,5 +192,6 @@
       window.open(topicURL, '_blank');
     }
   </script>
+    <script type="text/javascript" src="js/settings.js"></script>
 </body>
 </html>
