--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
 
     <script type="text/javascript" src="js/predict.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="settings.js"></script>
+    <script type="text/javascript" src="js/settings.js"></script>
   </body>
 </html>
