--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
               <li><a class="button" id="home">Home</a></li>
               <li><a class="button" href="settings.html">Settings</a></li>
-              <li><a class="button" href="#">Contact</a></li>
+              <li><a class="button" href="mailto:benedikt.schaechner@web.de">Contact</a></li>
             </ul>
           </div>
           <img
