--- a/project.html
+++ b/project.html
@@ -28,19 +28,17 @@
     <div class="container">
       <div class="sidebar">
         <h1 id="project-title"></h1>
+        <h3 id="project-owner"></h3>
         <br />
         <div class="project" id="project-description"></div>
         <!-- New section to display project description -->
-        <br />
+        
         <div class="project" id="project-topics"></div>
         <!-- New section to display topics -->
-        <br />
         <div class="project">
-          <a class="stars button" id="project-stars" target="_blank"></a>
-          <br />
-          <a class="forks button" id="project-forks" target="_blank"></a>
-          <br />
-          <a class="watchers button" id="project-watchers" target="_blank"></a>
+          <a class="stars button" id="project-stars" target="_blank" style="margin-right: 8px;"></a>
+          <a class="forks button" id="project-forks" target="_blank" style="margin-right: 8px;"></a>
+          <a class="watchers button" id="project-watchers" target="_blank" style="margin-right: 8px;"></a>
         </div>
       </div>
       <div class="project" id="project-readme"></div>
